# philippines-geospatial-platform

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  GITHUB-RELEASE-v2.2.0.md  LICENSE  README.md  complete_manifest.json  docker-compose.prod.yml  locustfile.py  merge_report.md  pyproject.toml  remediation_manifest.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/requirements/: requirements.txt  requirements_day1.txt  requirements_day2.txt
dags/: geo_pipeline_daily.py
data/: day1_profile_report.json  day1_profile_report.schema.json
docs/: ARCHITECTURE.md  AUDIT-CORRECTION-FAANG03.md  BYOD_GUIDE.md  README.md  RUNBOOK.md  SOURCE-OF-TRUTH-MATRIX.md  day-1-README.md  day-2-README.md  day-3-README.md  day-4-README.md  day-5-README.md  day-6-README.md  final-verification-audit-Day7-FINAL.md  ph_geospatial_explainer_llm.md  reddit_posts.md  screen_recording_guide.md
fitness_functions/: test_string_contracts.py
geo_service/: config.py
geo_service/api/: limiter.py  main.py
geo_service/domain/: exceptions.py
geo_service/infra/: cache.py  duckdb_conn.py  logging_config.py  metrics.py  secrets.py
geo_service/pipeline/: __init__.py  deploy_gate.py
render/: day4_choropleth_4k_render.py
scripts/: run_day1.py  run_day2.py  validate_analytical.py
sql/init/: 001_geo_platform_schema.sql
sql/lineage/: lineage_verification.sql
sql/views/: mart_geo_poverty_crosswalk.sql
static/: day2_tile_preview.html  deckgl_animation_config.js
tests/fixtures/: __init__.py
tests/integration/: test_bronze_minio_roundtrip.py  (+1 more)
(+15 files in other folders)
