[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ph-geospatial-platform"
version = "2.2.0"
description = "Philippine Geospatial Intelligence Platform — H3 analytics, PMTiles serving, Airflow pipeline"
readme = "docs/README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "duckdb>=1.0.0",
    "fastapi>=0.111.0",
    "fiona>=1.9.0",
    "geopandas>=0.14.0",
    "h3>=3.7.7",
    "httpx>=0.27.0",
    "mapclassify>=2.6.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pydantic>=2.7.4",
    "pyarrow>=14.0.0",
    "pyproj>=3.6.0",
    "shapely>=2.0.0",
    "slowapi>=0.1.9",
    "structlog>=24.2.0",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "locust>=2.0.0",
]
render = [
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
    "cartopy>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["geo_service*", "fitness_functions*"]

[tool.pytest.ini_options]
testpaths = ["tests", "fitness_functions"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
